--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -53,7 +53,7 @@ header {
 }
 
 .header-link {
-	color: #7d828a;
+	color: #656971;
 }
 
 .container {
@@ -68,7 +68,7 @@ header {
 	margin: 0 auto;
 	padding-bottom: 25px;
 	background-color: white;
-	border: 1px solid #E8E8E9;
+	border: 1px solid #d5d5d7;
 }
 
 .form-header {
@@ -78,17 +78,18 @@ header {
   align-items: center;
   padding: 0 2%;
   font-size: 10px;
-  border: 1px solid #E8E8E9;
+  border: 1px solid #d5d5d7;
 }
 
 .form-container {
-	height: 300px;
+	height: auto;
+	padding-bottom: 25px;
 	width: 60%;
 	margin: 45px auto 0 auto;
 }
 
 .text-field {
-	border: 2px solid #E8E8E9;
+	border: 2px solid #d5d5d7;
 	border-radius: 3px;
 }
 
@@ -107,18 +108,26 @@ header {
 	display: block;
 	width: 45vw;
 	height: 35px;
+	font-size: 18px;
+	padding-left: 2%;
 }
+
+.password {
+	font-weight: bold;
+}
+
 .remember-field {
 	margin: 10px 0 15px 32%;
 }
 .submit {
 	padding: 10px 20px;
 	border-radius: 3px;
-	background-color: turquoise;
+	background-color: #0184bd;
 	color: white;
 	margin: 0 2% 0 32%;
 }
 
 .forgot_link {
 	font-size: 13px;
+	color: blue;
 }
