--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,23 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+
+.user-wrapper {
+  height: auto;
+  width: 50vw;
+  border-radius: 3px;
+  margin: 0 auto;
+  background-color: white;
+  border: 1px solid #d5d5d7;
+}
+
+.user-header {
+  height: 62px;
+  background-color: #F7F7F7;
+  display: flex;
+  align-items: center;
+  padding: 0 2%;
+  font-size: 10px;
+  border: 1px solid #d5d5d7;
+}
