--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,7 +3,19 @@
 		<h2 class="form-title">Register</h2>
   </div>
 	<div class="form-container">
-		<%= form_with url: users_path, method: "post" do |f| %>
+		<%= form_with model: @user, url: users_path, method: "post" do |f| %>
+
+			<% if @user.errors.any? %>
+				<div id="error_explanation">
+					<h2><%= @user.errors.count %> 件のエラーがあります</h2>
+					<ul>
+					<% @user.errors.full_messages.each do |message| %>
+						<li><%= message %></li>
+					<% end %>
+					</ul>
+				</div>
+			<% end %>
+
 			<div class="field">
 				<%= f.label :name, "Name", class: "form-label" %>
 				<%= f.text_field :name, class: "form-field text-field" %>
@@ -11,7 +23,7 @@
 
 			<div class="field">
 				<%= f.label :email, "E-mail Addres", class: "form-label" %>
-				<%= f.text_field :email, class: "form-field text-field" %>
+				<%= f.email_field :email, class: "form-field text-field" %>
 			</div>
 
 			<div class="field">
